--- a/sponsors_d.css
+++ b/sponsors_d.css
@@ -1,13 +1,17 @@
 body{
-    overflow: hidden;
+    /* overflow: hidden; */
+    background-color:blue;
 }
 
 .sponsor_part{
-    background-color: rgb(245, 245, 255);
+    background-color: rgb(0, 0, 0);
     overflow: hidden;
     overflow-y: scroll;
     width: 100%;
     height: 100%;
+    color: aliceblue;
+    text-align: center;
+
 }
 
 .sponsor_head {
@@ -15,31 +19,80 @@ body{
     text-align: center;
   }
 .sponsor_row{
-    height: 80px;
-    margin: 20px;
-    padding: 50px;
+    
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+
+    /* display: grid;
+  grid-template-columns: repeat(auto, minmax(25px, 1fr)); */
+
 }
 
+.TERA,.GIGA,.MEGA, .KILO {
+    width: 60%;
+    display: flex;
+  align-items: center;
+  justify-content: left;
+  
+  margin: 8px;
+
+}
+.TERA{
+    height: 30px;
+}
+.GIGA{
+    height: 30px;
+}
+.MEGA{
+    height: 20px;
+}
+.KILO{
+    height: 10px;
+}
 .TERA img{
-    height: 150px; 
+    height: 60px; 
     width: auto;
+    margin: 20px;
+
 }
 
 .GIGA img{
-    height: 80px; 
+    height: 40px; 
     width: auto;
+    margin: 20px;
 }
 
 .MEGA img{
-    height: 80px; 
+    height: 40px; 
     width: auto;
+    margin: 20px;
+
 }
 
 .KILO img{
-    height: 40px; 
+    height: 20px; 
     width: auto;
+    margin: 20px;
+
 }
 
 .track_text{
     font-size:80%;
+    text-align: center;
+
+}
+
+
+.TERA h1{
+    font-size: 40px;
+}
+.GIGA h1{
+    font-size: 30px;
+}
+.MEGA h1{
+    font-size: 20px;
+}
+.KILO h1{
+    font-size: 10px;
 }
